# guilhermehas.github.io

./: .gitignore  README.md  about.html  archive.html  cabal.nix  contact.html  devShell.nix  flake.nix  guilherme-blog.agda-lib  guilherme-blog.cabal  index.html  result  site.hs
agda-posts/: IntegerProductNotZero.lagda.md  add-small-step-reduction.lagda.md  agda-nixpkgs.lagda.md  associativity-natural-numbers.lagda.md  compressed-lists.lagda.md  concurrency-language.lagda.md  containers.lagda.md  example.lagda.md  internal-library.agda  small-step-reduction.agda  small-step-reduction.lagda.md  unit-of-measure.lagda.md
css/: default.css
posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  Agda.css  Cubical.Core.Glue.html  Cubical.Core.Id.html  Cubical.Core.Primitives.html  Cubical.Data.Bool.Base.html  Cubical.Data.Bool.Properties.html  Cubical.Data.Empty.Base.html  Cubical.Data.Empty.Properties.html  Cubical.Data.FinData.Base.html  Cubical.Data.FinData.Properties.html  Cubical.Data.Int.Base.html  Cubical.Data.Int.Properties.html  Cubical.Data.List.Base.html  Cubical.Data.List.Properties.html  Cubical.Data.Nat.Base.html  Cubical.Data.Nat.Literals.html  Cubical.Data.Nat.Properties.html  Cubical.Data.Prod.Base.html  Cubical.Data.Sigma.Base.html  Cubical.Data.Sigma.Properties.html  Cubical.Data.Sum.Properties.html  Cubical.Data.Unit.Base.html  Cubical.Data.Unit.Properties.html  Cubical.Data.Vec.Base.html  Cubical.Data.Vec.NAry.html  Cubical.Data.Vec.Properties.html  Cubical.Foundations.Equiv.Base.html  (+52 more)
(+3 files in other folders)
