name:               guilherme-blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.14
                  , pandoc >= 2.2
                  , filepath >= 1.4
                  , directory >= 1.3
                  , process >= 1.4.3
                  , extra >= 1.6
  ghc-options:      -threaded
  default-language: Haskell2010
